--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "typescript": "^5.9.3"
   },
   "dependencies": {
+    "axios": "^1.13.2",
     "discord.js": "^14.25.1",
     "dotenv": "^17.2.3"
   }
